# homework-7/myBlogBeeGo/controllers/api.go
@@ -7,51 +7,47 @@
 package controllers
 
 import (
-	"bapi/models"
 	"encoding/json"
 	"github.com/astaxie/beego"
 	"go.mongodb.org/mongo-driver/bson/primitive"
-	"gopkg.in/russross/blackfriday.v2"
-	"html/template"
+	"myBlogBeeGo/models"
 	"net/http"
 )
 
-// MainController is.
-type MainController struct {
+// ApiController for operations with posts via API.
+type ApiController struct {
 	beego.Controller
 }
 
-// GetAllPosts shows all posts in main page.
-func (c *MainController) GetAllPosts() {
-	posts := models.NewPosts()
-	if err := posts.GetPosts(""); err != nil {
-		posts.Lg.Error("error get all posts: %s", err)
-		c.Ctx.ResponseWriter.WriteHeader(http.StatusInternalServerError)
-		c.Abort("500")
-		return
-	}
-	c.Data["BlogName"] = beego.AppConfig.String("BLOGNAME")
-	c.Data["Posts"] = &posts.Posts
-	c.TplName = "index.tpl"
-}
-
-// GetOnePost shows one posts with full content.
-func (c *MainController) GetOnePost() {
-	postNum := c.Ctx.Request.URL.Query().Get("id")
-	if postNum == "" {
-		c.Redirect("/", http.StatusMovedPermanently)
-	}
+//GetOnePost shows one posts with full content.
+//@Title GetOnePost
+//@Description get one post
+//@Tags posts
+//@Param	id	path string	true	"ID of the post"
+//@Success 200 body is empty
+//@Failure 500 body is empty
+//@Failure 404 not found
+//@router /:id([0-9a-h]+) [get]
+func (c *ApiController) GetOnePost() {
+	postNum := c.Ctx.Input.Param(":id")
 	posts := models.NewPosts()
 	if err := posts.GetPosts(postNum); err != nil {
 		posts.Lg.Error("error get one post: %s", err)
-		c.Ctx.ResponseWriter.WriteHeader(http.StatusNotFound)
-		c.Abort("404")
+		posts.SendError(c.Ctx.ResponseWriter, http.StatusNotFound, err, "sorry, error searching post")
+		return
 	}
-	c.Data["BlogName"] = beego.AppConfig.String("BLOGNAME")
-	posts.Posts[0].Body = template.HTML(blackfriday.Run([]byte(posts.Posts[0].Body)))
-	posts.Posts[0].ID = posts.Posts[0].OID.Hex()
-	c.Data["Post"] = &posts.Posts[0]
-	c.TplName = "post.tpl"
+	c.Ctx.ResponseWriter.Header().Set("Content-Type", "application/json")
+	data, err := json.Marshal(posts.Posts[0])
+	if err != nil {
+		posts.Lg.Error("Can't marshal error data: %s", err)
+		posts.SendError(c.Ctx.ResponseWriter, http.StatusInternalServerError, err, "sorry, error getting post")
+		return
+	}
+	if _, err = c.Ctx.ResponseWriter.Write(data); err != nil {
+		posts.Lg.Error("Can't write to ResponseWriter: %s", err)
+		return
+	}
+	c.Ctx.ResponseWriter.WriteHeader(http.StatusOK)
 }
 
 // DeletePost removes post from DB.
@@ -63,37 +59,28 @@ func (c *MainController) GetOnePost() {
 // @Failure 500 body is empty
 // @Failure 404 not found
 // @router /:id([0-9a-h]+) [delete]
-func (c *MainController) DeletePost() {
+func (c *ApiController) DeletePost() {
 	postNum := c.Ctx.Input.Param(":id")
 	posts := models.NewPosts()
 	if err := posts.DeletePost(postNum); err != nil {
 		posts.Lg.Error("error delete post: %s", err)
-		posts.SendError(c.Ctx.ResponseWriter, http.StatusInternalServerError, err, "sorry, error while delete post")
+		posts.SendError(c.Ctx.ResponseWriter, http.StatusInternalServerError, err, "sorry, error deleting post")
 		return
 	}
 	c.Ctx.ResponseWriter.WriteHeader(http.StatusOK)
 }
 
-// GetEditPost shows edit form for edit post.
-func (c *MainController) GetEditPost() {
-	postNum := c.Ctx.Request.URL.Query().Get("id")
-	if postNum == "" {
-		c.Redirect("/", http.StatusMovedPermanently)
-	}
-	posts := models.NewPosts()
-	if err := posts.GetPosts(postNum); err != nil {
-		posts.Lg.Error("error get one post for edit: %s", err)
-		c.Ctx.ResponseWriter.WriteHeader(http.StatusNotFound)
-		c.Abort("404")
-	}
-	c.Data["BlogName"] = beego.AppConfig.String("BLOGNAME")
-	posts.Posts[0].ID = posts.Posts[0].OID.Hex()
-	c.Data["Post"] = &posts.Posts[0]
-	c.TplName = "edit.tpl"
-}
-
 // UpdatePost updates post in DB.
-func (c *MainController) UpdatePost() {
+// @Title UpdatePost
+// @Description update post
+// @Tags posts
+// @Param	id	path string	true	"ID of the post"
+// @Param	body	body models.Post	true	"json post body, use html body in double quotes instead {}"
+// @Success 200 body is empty
+// @Failure 500 body is empty
+// @Failure 404 not found
+// @router /:id([0-9a-h]+) [put]
+func (c *ApiController) UpdatePost() {
 	postNum := c.Ctx.Input.Param(":id")
 	posts := models.NewPosts()
 	post, err := c.decodePost()
@@ -111,21 +98,15 @@ func (c *MainController) UpdatePost() {
 	c.Ctx.ResponseWriter.WriteHeader(http.StatusOK)
 }
 
-// GetCreatePost shows clean form for new post.
-func (c *MainController) GetCreatePost() {
-	c.Data["BlogName"] = beego.AppConfig.String("BLOGNAME")
-	c.TplName = "create.tpl"
-}
-
 // CreatePost creates new post.
 // @Title CreatePost
 // @Description create new post
 // @Tags posts
-// @Param	body	body models.Post	true	"json post body"
+// @Param	body	body models.Post	true	"json post body, use html body in double quotes instead {}"
 // @Success 201 body is empty
 // @Failure 500 body is empty
 // @router / [post]
-func (c *MainController) CreatePost() {
+func (c *ApiController) CreatePost() {
 	posts := models.NewPosts()
 
 	post, err := c.decodePost()
@@ -144,7 +125,7 @@ func (c *MainController) CreatePost() {
 }
 
 // decodePost is JSON decoder helper
-func (c *MainController) decodePost() (*models.Post, error) {
+func (c *ApiController) decodePost() (*models.Post, error) {
 	post := &models.Post{}
 	if err := json.NewDecoder(c.Ctx.Request.Body).Decode(post); err != nil {
 		return nil, err
